trunk/Archive2/17/62c62e9d0cacc5/output
main.cpp: In function 'int main()':
main.cpp:6:57: error: cannot convert 'char*' to 'char* const*' for argument '2' to 'int execvp(const char*, char* const*)'
     execvp("/bin/bash -c",const_cast<char*>(str.c_str()));
                                                         ^
