trunk/Archive2/17/62c62e9d0cacc5/main.cpp
#include <unistd.h>
#include <string>
int main()
{
    std::string str="echo aaa | tee -a /tmp.t.log";
    execvp("/bin/bash -c",const_cast<char*>(str.c_str()));
}